<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="282dp"
            android:layout_height="49dp"
            android:layout_marginBottom="7dp"
            android:backgroundTint="#0EE2FD"
            android:text="@string/LogIn"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/txtViewOlvidoContra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtViewOlvidoContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/contraseniaolvidada"
            android:textColor="#4D787B"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/switchLog"
            android:layout_width="288dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/switch_log_in"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchLog" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:textColorHint="#CCCACA"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="#CCCACA"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:boxStrokeWidth="1dp"
            app:counterTextColor="@color/black"
            app:cursorColor="#CCCACA"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:placeholderText="ex:abc@cdf.com"
            app:placeholderTextColor="#CCCACA">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="textWebEmailAddress"
                android:textColor="#302F2F"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#CCCACA"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="#CCCACA"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:boxStrokeWidth="1dp"
            app:counterTextColor="@color/black"
            app:cursorColor="#CCCACA"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/btnIniciarSesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasenia"
                android:inputType="textPassword"
                android:textColor="#302F2F"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>








    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>